--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>User Feedback Form</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+        <h1>User Feedback Form</h1>
+    <p>Feel free to provide any feedback by using the form below</p>
+    <form id="feedbackForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <br> </br>
+        <label for="comment">Comment:</label>
+        <br> </br>
+        <input id="comment" name="comment" required title = "Type feedback here"></input>
+
+        <button type="submit">Submit</button>
+    </form>
+    <div id="feedbackDisplay"></div>
+    <script src="cp_1.js"></script>
+</body>
+
+</html>
